tests/src/frontend/typechecking/invalid/mutable_class_object_5.sk
mutable class Foo<+T>(mutable v: T)

fun no(x: readonly Foo<Foo<Int>>): void {
  _ = class(x)(mutable Foo(42))
}
